// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots UI/SimpleTypeahead Multiple 1`] = `
<div
  class="simple-typeahead"
  id="multiple_wrapper"
>
  <input
    autocomplete="off"
    class="simple-typeahead-input"
    id="multiple"
    placeholder="placeholder"
    type="text"
  />
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots UI/SimpleTypeahead Simple 1`] = `
<div
  class="simple-typeahead"
  id="simple_wrapper"
>
  <input
    autocomplete="off"
    class="simple-typeahead-input"
    id="simple"
    placeholder="placeholder"
    type="text"
  />
  <!--v-if-->
</div>
`;
